--- a/themes/hugo-creative-portfolio-theme/static/css/style.default.css
+++ b/themes/hugo-creative-portfolio-theme/static/css/style.default.css
@@ -1296,7 +1296,7 @@ STYLE SWITCHER FOR DEMO
 }
 /* navbar */
 .navbar {
-  font-family: "Roboto", Helvetica, Arial, sans-serif;
+  font-family: 'Poppins', sans-serif;
   min-height: 80px;
   margin-bottom: 0;
   border-top: none;
