--- a/themes/hugo-creative-portfolio-theme/static/css/custom.css
+++ b/themes/hugo-creative-portfolio-theme/static/css/custom.css
@@ -1,1 +1,12 @@
 /* your styles go here */
+
+/* Fontes */
+<style>
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap');
+</style>
+
+/* Fontes */
+
+*{
+    font-family: 'Poppins', sans-serif;
+    }
