--- a/themes/hugo-creative-portfolio-theme/layouts/partials/sidebar.html
+++ b/themes/hugo-creative-portfolio-theme/layouts/partials/sidebar.html
@@ -1,6 +1,7 @@
 <div id="sidebar" class="col-xs-6 col-sm-4 col-md-3 sidebar-offcanvas">
   <div class="sidebar-content">
     <h1 class="sidebar-heading"><a href="{{ .Site.BaseURL }}">{{ .Site.Title }}</a></h1>
+    {{ partial "avatar.html" . }}    
     {{ range .Site.Params.sidebarAbout }}
       <p class="sidebar-p">{{ . | safeHTML }}</p>
     {{ end }}
@@ -10,9 +11,8 @@
       {{ end }}
     </ul>
     {{ partial "social_buttons_in_sidebar.html" . }}
-
     <div class="copyright">
-      <p class="credit">
+      <p class="credit">  
         {{ with .Site.Params.copyright }}
           {{ . | safeHTML }} |
         {{ end }}
