--- a/themes/hugo-creative-portfolio-theme/static/css/style.matheus.css
+++ b/themes/hugo-creative-portfolio-theme/static/css/style.matheus.css
@@ -10,8 +10,13 @@ Startup Template By Bootstrapious.com
 GENERAL
 =====================
 */
+
 html,
 body {
+/*========== Colors ==========*/
+/* Change favorite color */
+    --main-color: #2250fc; /*Purple 250 - Green 142 - Blue 230 - Pink 340*/
+/* -===== */
   overflow-x: hidden;
   /* Prevent scroll on narrow devices */
 }
@@ -57,6 +62,35 @@ section.background-secondary {
 .img-responsive {
   border-radius: 30px;
   margin: 0 auto;
+}
+.avatar-responsive {
+  object-fit: cover;
+  width:230px;
+  height:230px;  
+  position: relative;
+  top: 0px;
+  bottom: 0px;
+  left: 0px;
+  right: 0px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  animation: morph 8s ease-in-out infinite 1s;
+  background-blend-mode: multiply;
+  -webkit-box-shadow: inset 0px 0px 0px 9px rgba(255,255,255,.3);
+  -moz-box-shadow: inset 0px 0px 0px 9px rgba(255,255,255,.3);
+  box-shadow: inset 0px 0px 0px 9px rgba(255,255,255,.3);
+}
+@keyframes morph {
+  0% {
+      border-radius: 60% 40% 30% 70% / 60% 30% 70% 40%;
+ }
+  50% {
+      border-radius: 30% 60% 70% 40% / 50% 60% 30% 60%;
+ }
+  100% {
+      border-radius: 60% 40% 30% 70% / 60% 30% 70% 40%;
+ }
 }
 .no-space .box {
   margin: 0 -15px;
@@ -123,10 +157,10 @@ button i.fa {
   cursor: pointer !important;
 }
 .required {
-  color: #2250fc
+  color: var(--main-color)
 }
 .accent {
-  color: #2250fc
+  color: var(--main-color)
 }
 .text-uppercase {
   text-transform: uppercase;
@@ -136,16 +170,16 @@ button i.fa {
   list-style: none;
 }
 .btn-ghost {
-  color: #2250fc
+  color: var(--main-color)
   background-color: transparent;
-  border-color: #2250fc
+  border-color: var(--main-color)
 }
 .btn-ghost:hover,
 .btn-ghost:focus,
 .btn-ghost:active,
 .btn-ghost.active,
 .open .dropdown-toggle.btn-ghost {
-  color: #2250fc
+  color: var(--main-color)
   background-color: rgba(0, 0, 0, 0);
   border-color: #ea1a5d;
 }
@@ -170,11 +204,11 @@ fieldset[disabled] .btn-ghost:active,
 .btn-ghost[disabled].active,
 fieldset[disabled] .btn-ghost.active {
   background-color: transparent;
-  border-color: #2250fc
+  border-color: var(--main-color)
 }
 .btn-ghost .badge {
   color: transparent;
-  background-color: #2250fc
+  background-color: var(--main-color)
 }
 .btn-ghost:hover,
 .btn-ghost:focus,
@@ -182,8 +216,8 @@ fieldset[disabled] .btn-ghost.active {
 .btn-ghost.active,
 .open .dropdown-toggle.btn-ghost {
   color: #fff;
-  background-color: #2250fc
-  border-color: #2250fc
+  background-color: var(--main-color)
+  border-color: var(--main-color)
 }
 .btn-ghost-black {
   color: #000000;
@@ -291,8 +325,8 @@ fieldset[disabled] .btn-white.active {
   height: 60px;
   line-height: 60px;
   border-radius: 30px;
-  border: solid 1px #2250fc
-  color: #2250fc
+  border: solid 1px var(--main-color)
+  color: var(--main-color)
   -webkit-transition: all 0.2s ease-out;
   -moz-transition: all 0.2s ease-out;
   transition: all 0.2s ease-out;
@@ -326,8 +360,8 @@ SIDEBAR + RIGHT COLUMN
 }
 @media screen and (min-width: 992px) {
   .sidebar-content {
-    padding-left: 0px;
-    padding-right: 30px;
+    padding-left: 30px;
+    padding-right: 15px;
   }
 }
 .sidebar-heading {
@@ -341,7 +375,7 @@ SIDEBAR + RIGHT COLUMN
   transition: all 0.2s ease-out;
 }
 .sidebar-heading a:hover {
-  border-bottom: dotted 1px #2250fc
+  border-bottom: dotted 1px var(--main-color)
   color: #000;
   text-decoration: none;
 }
@@ -369,18 +403,18 @@ SIDEBAR + RIGHT COLUMN
   color: #3c4043;
 }
 .sidebar-menu li.active a {
-  color: #2250fc
+  color: var(--main-color)
   font-weight: bold;
 }
 .sidebar-menu li.active:before {
-  color: #2250fc
+  color: var(--main-color)
 }
 .sidebar-menu li:hover a {
   text-decoration: none;
-  color: #2250fc
+  color: var(--main-color)
 }
 .sidebar-menu li:hover:before {
-  color: #2250fc
+  color: var(--main-color)
 }
 .content-column {
   padding-top: 40px;
@@ -418,7 +452,7 @@ SIDEBAR + RIGHT COLUMN
   font-family: 'FontAwesome';
   content: '\f105';
   margin: 0 5px 0 -15px;
-  color: #2250fc
+  color: var(--main-color)
 }
 .small-navbar {
   margin-bottom: 20px;
@@ -446,7 +480,7 @@ SIDEBAR + RIGHT COLUMN
   transition: all 0.2s ease-out;
 }
 .small-navbar-heading a:hover {
-  border-bottom: dotted 1px #2250fc
+  border-bottom: dotted 1px var(--main-color)
   color: #000;
   text-decoration: none;
 }
@@ -474,7 +508,7 @@ OFF-CANVAS SIDEBAR BEHAVIOUR
     /* 6 columns */
   }
   .row-offcanvas-left .sidebar-offcanvas {
-    left: -48%;
+    left: -44%;
     /* 6 columns */
   }
   .row-offcanvas-right.active {
@@ -521,7 +555,7 @@ SERVICES / INTEGRATIONS
   width: 100px;
   height: 1px;
   margin: 20px auto 20px;
-  background: #2250fc
+  background: var(--main-color)
 }
 .services p {
   font-size: 19px;
@@ -603,8 +637,8 @@ p.social a {
              */
 }
 p.social a:hover {
-  color: #2250fc
-  border-color: #2250fc
+  color: var(--main-color)
+  border-color: var(--main-color)
 }
 p.social a i {
   vertical-align: bottom;
@@ -693,7 +727,7 @@ MAIN PORTFOLIO SLIDER
 }
 #main-slider .owl-controls .owl-page.active span,
 #main-slider .owl-controls.clickable .owl-page:hover span {
-  background: #2250fc
+  background: var(--main-color)
 }
 /*
 =====================
@@ -758,7 +792,7 @@ ABOUT
 }
 .progress-bar-skill5 {
   background-color: #a9a8a8;
-  background-color: #2250fc
+  background-color: var(--main-color)
 }
 .progress-striped .progress-bar-skill5 {
   background-image: -webkit-linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
@@ -851,7 +885,7 @@ a:active {
   border-bottom: solid 1px transparent;
 }
 .box-masonry h4 a:hover {
-  border-bottom: dotted 1px #2250fc
+  border-bottom: dotted 1px var(--main-color)
   color: #000;
   text-decoration: none;
 }
@@ -1025,7 +1059,7 @@ a:active {
   height: 100%;
   opacity: 0;
   filter: alpha(opacity=0);
-  background: #2250fc
+  background: var(--main-color)
 }
 .box-image .name {
   position: absolute;
@@ -1249,7 +1283,7 @@ STYLE SWITCHER FOR DEMO
 .nav .open > a:hover,
 .nav .open > a:focus {
   background-color: #cdcdcd;
-  border-color: #2250fc
+  border-color: var(--main-color)
 }
 .nav-tabs {
   border-bottom: 1px solid #dddddd;
@@ -1275,7 +1309,7 @@ STYLE SWITCHER FOR DEMO
 .nav-pills > li.active > a:hover,
 .nav-pills > li.active > a:focus {
   color: #ffffff;
-  background-color: #2250fc
+  background-color: var(--main-color)
 }
 .nav-tabs-justified > li > a {
   border-radius: 0;
@@ -1574,7 +1608,7 @@ STYLE SWITCHER FOR DEMO
 .dropdown-menu > .active > a:hover,
 .dropdown-menu > .active > a:focus {
   color: #ffffff;
-  background-color: #2250fc
+  background-color: var(--main-color)
 }
 /* modal */
 .modal-content {
@@ -1585,19 +1619,19 @@ STYLE SWITCHER FOR DEMO
 }
 /* scaffolding */
 body {
-  font-family: "Roboto", Helvetica, Arial, sans-serif;
+  font-family: 'Poppins', sans-serif;
   font-size: 16px;
   line-height: 1.55;
   color: #000000;
   background-color: #f4f4f4;
 }
 a {
-  color: #2250fc
+  color: var(--main-color)
   text-decoration: none;
 }
 a:hover,
 a:focus {
-  color: #2250fc;
+  color: var(--main-color);
   text-decoration: underline;
 }
 a:focus {
@@ -1651,7 +1685,7 @@ hr {
   color: #3c4043;
 }
 .breadcrumb a {
-  color: #2250fc
+  color: var(--main-color)
 }
 @media (max-width: 991px) {
   .breadcrumb {
@@ -1662,7 +1696,7 @@ hr {
 /* buttons  */
 .btn {
   font-weight: 400;
-  font-family: "Roboto", Helvetica, Arial, sans-serif;
+  font-family: 'Poppins', sans-serif;
   padding: 6px 12px;
   font-size: 16px;
   line-height: 1.55;
@@ -1670,8 +1704,8 @@ hr {
 }
 .btn-primary {
   color: #ffffff;
-  background-color: #2250fc
-  border-color: #2250fc
+  background-color: var(--main-color)
+  border-color: var(--main-color)
 }
 .btn-primary:hover,
 .btn-primary:focus,
@@ -1702,11 +1736,11 @@ fieldset[disabled] .btn-primary:active,
 .btn-primary.disabled.active,
 .btn-primary[disabled].active,
 fieldset[disabled] .btn-primary.active {
-  background-color: #2250fc
-  border-color: #2250fc
+  background-color: var(--main-color)
+  border-color: var(--main-color)
 }
 .btn-primary .badge {
-  color: #2250fc
+  color: var(--main-color)
   background-color: #ffffff;
 }
 .btn-transparent {
@@ -1755,7 +1789,7 @@ fieldset[disabled] .btn-transparent.active {
 .btn-transparent:active,
 .btn-transparent.active {
   background: #ffffff;
-  color: #2250fc
+  color: var(--main-color)
 }
 .btn-lg {
   padding: 10px 16px;
@@ -1781,7 +1815,7 @@ fieldset[disabled] .btn-transparent.active {
 }
 /* labels */
 .label {
-  font-family: "Roboto", Helvetica, Arial, sans-serif;
+  font-family: 'Poppins', sans-serif;
   font-weight: normal;
   text-transform: uppercase;
 }
@@ -1819,7 +1853,7 @@ label {
   color: #3c4043;
 }
 .form-control:focus {
-  border-color: #2250fc
+  border-color: var(--main-color)
   outline: 0;
   -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(239, 82, 133, 0.6);
   box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(239, 82, 133, 0.6);
@@ -1835,7 +1869,7 @@ label {
   text-transform: uppercase;
   letter-spacing: 0.1em;
   font-size: 19px;
-  font-family: "Roboto", Helvetica, Arial, sans-serif;
+  font-family: 'Poppins', sans-serif;
   font-weight: bold;
 }
 .pager li {
@@ -1844,14 +1878,14 @@ label {
 .pager li > a,
 .pager li > span {
   background-color: #ffffff;
-  border: 1px solid #2250fc
+  border: 1px solid var(--main-color)
   border-radius: 0;
 }
 .pager li > a:hover,
 .pager li > a:focus {
   text-decoration: none;
   color: #fff;
-  background-color: #2250fc
+  background-color: var(--main-color)
 }
 .pager .disabled > a,
 .pager .disabled > a:hover,
@@ -1864,7 +1898,7 @@ label {
 /* pagination */
 .pagination {
   margin: 24px 0;
-  font-family: "Roboto", Helvetica, Arial, sans-serif;
+  font-family: 'Poppins', sans-serif;
   border-radius: 0;
 }
 .pagination > li > a,
@@ -1872,7 +1906,7 @@ label {
   padding: 6px 12px;
   line-height: 1.55;
   text-decoration: none;
-  color: #2250fc
+  color: var(--main-color)
   background-color: #ffffff;
   border: 1px solid #dddddd;
 }
@@ -1891,7 +1925,7 @@ label {
 .pagination > li > span:hover,
 .pagination > li > a:focus,
 .pagination > li > span:focus {
-  color: #2250fc
+  color: var(--main-color)
   background-color: #fcdee8;
   border-color: #dddddd;
 }
@@ -1903,8 +1937,8 @@ label {
 .pagination > .active > span:focus {
   z-index: 2;
   color: #ffffff;
-  background-color: #2250fc
-  border-color: #2250fc
+  background-color: var(--main-color)
+  border-color: var(--main-color)
 }
 .pagination > .disabled > span,
 .pagination > .disabled > span:hover,
@@ -2000,8 +2034,30 @@ p {
   font-size: 30px;
 }
 @media (max-width: 768px) {
-  .sidebar-heading a{
-    color: #fff
+p.social {
+    margin-top: 20px;
+    display: flex;
+}
+.avatar-responsive {
+  object-fit: cover;
+  width:150px;
+  height:150px;  
+  position: relative;
+  top: 0px;
+  bottom: 0px;
+  left: 3px;
+  right: 0px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  animation: morph 8s ease-in-out infinite 1s;
+  background-blend-mode: multiply;
+  -webkit-box-shadow: inset 0px 0px 0px 9px rgba(255,255,255,.3);
+  -moz-box-shadow: inset 0px 0px 0px 9px rgba(255,255,255,.3);
+  box-shadow: inset 0px 0px 0px 9px rgba(255,255,255,.3);
+}
+.sidebar-heading a{
+  color: #f4f4f4
 }
 .lead {
     font-size: 24px;
@@ -2017,14 +2073,14 @@ p {
   font-style: italic;
 }
 .text-primary {
-  color: #2250fc
+  color: var(--main-color)
 }
 a.text-primary:hover {
   color: #eb2364;
 }
 .bg-primary {
   color: #fff;
-  background-color: #2250fc
+  background-color: var(--main-color)
 }
 a.bg-primary:hover {
   background-color: #eb2364;
@@ -2037,7 +2093,7 @@ blockquote {
   padding: 12px 24px;
   margin: 0 0 24px;
   font-size: 16px;
-  border-left: 5px solid #2250fc
+  border-left: 5px solid var(--main-color)
 }
 blockquote footer,
 blockquote small,
@@ -2054,7 +2110,7 @@ blockquote .small:before {
 }
 .blockquote-reverse,
 blockquote.pull-right {
-  border-right: 5px solid #2250fc
+  border-right: 5px solid var(--main-color)
 }
 address {
   margin-bottom: 24px;
@@ -2083,18 +2139,18 @@ address {
   border-bottom-color: #666666;
 }
 .panel-primary {
-  border-color: #2250fc
+  border-color: var(--main-color)
 }
 .panel-primary > .panel-heading {
   color: #ffffff;
-  background-color: #2250fc
-  border-color: #2250fc
+  background-color: var(--main-color)
+  border-color: var(--main-color)
 }
 .panel-primary > .panel-heading + .panel-collapse .panel-body {
-  border-top-color: #2250fc
+  border-top-color: var(--main-color)
 }
 .panel-primary > .panel-footer + .panel-collapse .panel-body {
-  border-bottom-color: #2250fc
+  border-bottom-color: var(--main-color)
 }
 .panel-primary .panel-title {
   font-weight: 300;
@@ -2111,7 +2167,7 @@ a.badge:focus {
 }
 a.list-group-item.active > .badge,
 .nav-pills > .active > a > .badge {
-  color: #2250fc
+  color: var(--main-color)
   background-color: #ffffff;
 }
 .nav-pills > li > a > .badge {
