--- a/themes/hugo-creative-portfolio-theme/layouts/partials/head.html
+++ b/themes/hugo-creative-portfolio-theme/layouts/partials/head.html
@@ -3,6 +3,8 @@
 {{ with .Site.Title }}<title>{{ . }}</title>{{ end }}
 {{ with .Site.Params.description }}<meta name="description" content="{{ . }}">{{ end }}
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+<script type="text/javascript" src="js/vanilla-tilt.js"></script>
 <link rel="stylesheet" href="{{ "css/bootstrap.css" | absURL }}">
 <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Roboto:400,300,700,400italic">
 <link rel="stylesheet" href="{{ "css/font-awesome.min.css" | absURL }}">
