--- a/themes/hugo-creative-portfolio-theme/layouts/partials/portfolio.html
+++ b/themes/hugo-creative-portfolio-theme/layouts/partials/portfolio.html
@@ -4,7 +4,7 @@
         <div class="row">
           {{ range .Data.Pages }}
               <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 masonry-item">
-                  <div class="box-masonry">
+                  <div class="box-masonry" data-tilt data-tilt-reverse="true" data-tilt-max="5">
                       {{ if and (isset .Params "image") .Params.image }}
                         {{ if eq .Params.showonlyimage true }}
                         <a href="{{ .Permalink }}" title="" class="box-masonry-image with-hover-overlay">
