--- a/themes/hugo-creative-portfolio-theme/layouts/partials/scripts.html
+++ b/themes/hugo-creative-portfolio-theme/layouts/partials/scripts.html
@@ -8,6 +8,17 @@
 <script src="{{ "js/owl.carousel.min.js" | absURL }}"></script>
 <script src="{{ "js/front.js" | absURL }}"></script>
 <script src="{{ "js/vanilla-tilt.js" | absURL }}" ></script>
+<script>
+  if (window.netlifyIdentity) {
+    window.netlifyIdentity.on("init", user => {
+      if (!user) {
+        window.netlifyIdentity.on("login", () => {
+          document.location.href = "/admin/";
+        });
+      }
+    });
+  }
+</script>
 
 {{ if .Site.Params.analytics.matomo }}
   {{ partial "_analytics/matomo.html" . }}
