--- a/themes/hugo-creative-portfolio-theme/static/css/style.matheus.css
+++ b/themes/hugo-creative-portfolio-theme/static/css/style.matheus.css
@@ -531,6 +531,9 @@ OFF-CANVAS SIDEBAR BEHAVIOUR
     width: 50%;
     /* 6 columns */
   }
+.sidebar-heading a {
+    color: transparent;
+  }
 }
 /*
 =====================
